refactor: adaptation du code et correction de dépréciations après migration 6.4

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,8 +17,10 @@ framework:
     php_errors:
         log: true
 
-    messenger:
-        reset_on_message: true
+    handle_all_throwables: true
+
+    annotations:
+        enabled: false
 
 when@test:
     framework:
