--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,16 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "test": [
+            "php bin/console doctrine:database:drop --env=test --force",
+            "php bin/console doctrine:database:create --env=test",
+            "php bin/console doctrine:schema:create --env=test",
+            "php bin/console doctrine:fixtures:load --env=test --no-interaction",
+            "php vendor/bin/phpunit --coverage-html public/test-coverage"
+        ],
+        "test-no-purge": [
+            "php vendor/bin/phpunit --coverage-html public/test-coverage"
         ]
     },
     "conflict": {
@@ -95,7 +105,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.0",
         "fakerphp/faker": "^1.24",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
