--- a/composer.json
+++ b/composer.json
@@ -133,6 +133,7 @@
         "doctrine/doctrine-fixtures-bundle": "^4.0",
         "fakerphp/faker": "^1.24",
         "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
         "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
