--- a/composer.json
+++ b/composer.json
@@ -118,7 +118,9 @@
         ],
         "test-media-ctrl": [
             "php vendor/bin/phpunit tests/Fonctional/MediaControllerTest.php --coverage-html Tests/test-coverage"
-        ]
+        ],
+        "cs:fix": "php-cs-fixer fix",
+        "cs:check": "php-cs-fixer fix --dry-run --diff"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -132,6 +134,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.0",
         "fakerphp/faker": "^1.24",
+        "friendsofphp/php-cs-fixer": "^3.86",
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-doctrine": "^2.0",
         "phpunit/phpunit": "^9.6",
